...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yollowish"
    tools:context="presentation.CardviewActivity">

    <TextView
        android:id="@+id/card_front"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:text="@string/question"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@color/yollowishButtonColor"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/card_back"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:text="@string/answer"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@color/yollowishButtonColor"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/flip_button"
        android:backgroundTint="@color/yollowishButtonColor"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/flip"
        android:textColor="@color/grayish"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_front" />

    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="48dp"
        android:layout_height="51dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="65dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/flip_button"
        app:layout_constraintTop_toBottomOf="@+id/card_front"
        app:srcCompat="@drawable/ic_baseline_delete_forever_24" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="61dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="334dp"
        android:layout_marginBottom="117dp"
...
