...
        android:layout_marginTop="116dp"
        android:layout_marginEnd="136dp"
        android:fontFamily="@font/baloo"
        android:text="@string/question"
        android:textColor="@color/grayish"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
...
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/baloo"
        android:text="@string/answer"
        android:textColor="@color/grayish"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_make_flashcard"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="100dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="101dp"
...
