...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yollowish"
    tools:context="presentation.ShelfCardActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="61dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="334dp"
        android:layout_marginBottom="171dp"
...
        android:background="@color/yollowishButtonColor"
        android:gravity="center"
        android:text="@string/question"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/flip_button2"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        app:layout_constraintStart_toEndOf="@+id/previous_button"
        app:layout_constraintTop_toBottomOf="@+id/addFolder" />

    <ImageView
        android:id="@+id/next_button"
        android:layout_width="35dp"
...
