...
        android:layout_height="250dp"
        android:padding="20dp"
        android:background="@color/yollowishButtonColor"
        >

        <TextView
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:text="@string/myProfile"
            android:textColor="@color/cardview_dark_background"
            android:textSize="35sp"
...
